2007-06-07  David Hyatt  <hyatt@apple.com>

        Fix crash.  Null check layer.  Bug 13984.

        Reviewed by andersca

        * WebCore.xcodeproj/project.pbxproj:
        * page/FrameView.cpp:
        (WebCore::FrameView::windowClipRectForLayer):

2007-06-07  Oliver Hunt  <oliver@apple.com>

        Reviewed by Justin.

        Remove incorrect assertions.
        
        These assertions were made on the assumption that 
        TSM would always call with a range that was contained 
        by an editable region.
        
        TSM may call -[WebHTMLView characterIndexForPoint:] on a mouse
        event that is otherwise unrelated to editing, which may
        be outside the current editing region, triggering these 
        assertions.

        * page/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge convertToNSRange:]):

2007-06-07  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John.
        
        <rdar://problem/5237074> REGRESSION: editing/unsupported-content/table-delete-003 is failing (13931)
        
        * editing/DeleteSelectionCommand.cpp:
        (WebCore::DeleteSelectionCommand::initializeStartEnd):
        We wouldn't expand the selection to include a special element 
        at the start of the selection unless the end of the selection 
        was at the end of a special element. Avoid a special 
        element at the start as long as it's fully selected. Ditto for 
        the end.
        * editing/htmlediting.cpp:
        (WebCore::positionBeforeContainingSpecialElement):
        (WebCore::positionAfterContainingSpecialElement):

2007-06-07  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders.

        Patch for  http://bugs.webkit.org/show_bug.cgi?id=14028
        Finish autogenerating the JS bindings for Node

        * DerivedSources.make:
        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSHTMLElementWrapperFactory.cpp:
        (WebCore::createJSHTMLWrapper):